Auto-commit: 2026-01-08 02:44:57